@@ -47,13 +47,16 @@ IDR_TRAYMENU MENU
 	{
 		MENUITEM "&Open...", IDM_OPEN
 		MENUITEM "&Stop", IDM_STOP
+#ifndef _UNICODE /* TODO */
 		MENUITEM "File &information...", IDM_FILE_INFO
 		MENUITEM "Save as &WAV...", IDM_SAVE_WAV, GRAYED
+#endif
 		MENUITEM "&About WASAP...", IDM_ABOUT
 		MENUITEM "&Exit", IDM_EXIT
 	}
 }
 
+#ifndef _WIN32_WCE
 1 24
 {
 	"<?xml version=""1.0""?>"
@@ -66,6 +69,7 @@ IDR_TRAYMENU MENU
 	"</dependentAssembly></dependency>"
 	"</assembly>"
 }
+#endif
 
 #endif /* WASAP */
 
@@ -178,6 +182,8 @@ FONT 8, "MS Sans Serif"
 
 #endif /* defined(WINAMP) || defined(FOOBAR2000) || defined(GSPLAYER) || defined(APOLLO) || defined(XMPLAY) */
 
+#ifndef _UNICODE /* TODO */
+
 #if defined(WASAP) || defined(WINAMP) || defined(APOLLO) || defined(XMPLAY)
 
 #include "info_dlg.h"
@@ -233,6 +239,8 @@ FONT 8, "MS Sans Serif"
 }
 
 #endif /* defined(WASAP) || defined(WINAMP) */
+
+#endif /* _UNICODE */
 
 1 VERSIONINFO
 	FILEVERSION ASAP_VERSION_MAJOR, ASAP_VERSION_MINOR, ASAP_VERSION_MICRO, 0
